# winelayer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
winelayer/: README.md  fix_db.py  pyproject.toml
winelayer/app/: README.md  pubspec.yaml
winelayer/app/lib/: main.dart
winelayer/app/lib/models/: app_model.dart  catalog_model.dart
winelayer/app/lib/providers/: app_providers.dart
winelayer/app/lib/screens/: add_app_screen.dart  catalog_screen.dart  diagnostics_screen.dart  install_wizard_screen.dart  library_screen.dart  onboarding_screen.dart  settings_screen.dart
winelayer/app/lib/services/: daemon_client.dart
winelayer/app/lib/theme/: app_colors.dart  app_theme.dart
winelayer/app/linux/: CMakeLists.txt
winelayer/app/windows/: CMakeLists.txt
winelayer/compat-db/: apps.json  error_rules.json
winelayer/compat-db/scripts/: 7zip.yaml  foobar2000.yaml  irfanview.yaml  notepadplusplus.yaml  paintdotnet.yaml  vlc.yaml
winelayer/daemon/: __init__.py  config.py  main.py
winelayer/daemon/core/: __init__.py  catalog_manager.py  dependency_resolver.py  fix_engine.py  installer.py  ipc_server.py  job_queue.py  log_analyzer.py  prefix_manager.py  registry_manager.py  script_engine.py  system_requirements.py  vm_manager.py  wine_manager.py
winelayer/daemon/db/: __init__.py  database.py  models.py
winelayer/scripts/: build.sh  install.sh  start.sh
winelayer/tests/: __init__.py  test_catalog_manager.py  test_dependency_resolver.py  test_installer.py  test_ipc_server.py  test_job_queue.py  test_prefix_manager.py  test_script_engine.py
(+11 files in other folders)
